# Cecs

./: .clang-format  .gitignore  CMakeLists.txt  DtAllocators.h  DtNumericalTypes.h  README.md  debug_build.bat  debug_build.sh  main.c
Collections/: Collections.c  Collections.h  Iterator.c  Iterator.h
Core/: DtAllocators.h  DtNumericalTypes.h
Core/Collections/: Collections.c  Collections.h  RbTree.c
Core/Components/: Components.c  Components.h
Core/DtComponents/: Components.h
Core/Ecs/: BaseComponents.h  ComponentHandler.c  ComponentRegister.c  DrawHandler.c  DtEcs.h  DtEcsManager.c  Entity.c  RegisterHandler.h  Systems.c  TagPool.c  UpdateHandler.c
Core/scheduler/: DtGameScheduler.h  DtScheduler.h  Environment.c  FileHandle.h  LazyLoad.h  RuntimeScheduler.h  SceneLoader.c  TypeParse.c
CoreTest/: main_tests.c
CoreTest/TestModule/: TestSource.c
CoreTest/Tests/: TestComponentRegister.c  TestCreateRemoveEntity.c  TestEcs.h  TestFilter.c  TestModuleLoad.c  TestParentChildrenRelations.c  TestPools.c  TestSceneParse.c  TestSystemsRegister.c
Ecs/: BaseComponents.h  ComponentHandler.c  ComponentPool.c  ComponentRegister.c  ComponentsHandler.h  DrawHandler.c  DtEcs.h  DtEcsManager.c  Ecs.h  EcsPool.c  EcsTests.h  EcsTypes.h  Entity.c  RegisterHandler.h  Systems.c  TagPool.c  UpdateHandler.c  UpdateHandler.h
Ecs/EcsManager/: EcsManager.c  EcsManager.h
Ecs/Entity/: Entity.c  Entity.h
Ecs/Pools/: BaseComponents.h  ComponentPool.c  EcsPool.c  EcsPool.h  TagPool.c
Ecs/Systems/: Systems.c  Systems.h
Editor/: EditorApi.h  GameLib.h  GameObjectInteract.h  UI.h  main_editor.c
Editor/ main menu/: MainMenuLoader.h
Editor/GameLibLink/: GameLib.h  GameLibDraw.c  GameLibLoader.c
Editor/GameObjectInteract/: GameCamera.c
Editor/UI/: EditorApi.c  EntityComponentsPanel.c  Inspecor.c  ManagePanel.c  MessagePanel.c  Systems.c  user_interface.c
Editor/source/: game_scene.dt.scene
Game/: Game.c  Game.h  main_game.c
Game/Components/: Components.h
Game/Systems/: GameSystems.c  GameSystems.h
Game/source/scenes/: test_scene_1.dt.scene
GameScripts/: ColliderGrid.c  DeleteMe.c  DrawSpriteSystem.c  GameComponents.h  GameScripts.h  Sprite.c  game_main.c
GameScripts/Components/: Collider.c  ColliderGrid.c  Sprite.c
GameScripts/Systems/: ColliderGridSystem.c  DrawSpriteSystem.c
Tests/: EcsManagerTests.c  EcsManagerTests.h  TestComponentRegister.c  TestCreateRemoveEntity.c  TestEcs.h  TestFilter.c  TestParentChildrenRelations.c  TestPools.c  TestRegisterAll.c  TestSystemsRegister.c
builds/linux/core/: DtEngineTest  test_scene_1.dt.scene
builds/linux/editor/: Editor  editor_main_scene.dt.scene
builds/linux/game/: Game
cmake/: config.cmake  directories.cmake  linking.cmake
cmake/targets/: core.cmake  editor.cmake  game.cmake  test.cmake
mains/: main_game.c  main_tests.c
schedeler/: DtGameScheduler.h
scheduler/: DtGameScheduler.h  SceneLoader.c
serializing/: SerializedComponent.h  SizeTypes.h  pref.c  pref.h
source/scenes/: test_scene_1.dt.scene
tutorial/EcsManager/: EcsManager.md  create n kill.md
